# autoClick

./: .gitignore  CMakeLists.txt  README.md  config.ini  rebuild.bat
.trae/documents/: AutoClicker-Pro UI 重设计方案.md  plan_20260210_130021.md
docs/: AutoClicker-Pro-Lua-Scripting-Reference.md  UI-Theme-Guide.md  config-example.ini
docs/ui-redesign/: README.md
publish/: config.ini
scripts/: clipboard_flow.lua  color_wait_demo.lua  notepad_automation.lua
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: Converter.cpp  Converter.h  HighPrecisionWait.h  HighResClock.h  Hooks.cpp  Hooks.h  Humanizer.cpp  Humanizer.h  InputUtils.h  Logger.cpp  Logger.h  LuaEngine.cpp  LuaEngine.h  OverlayWindow.cpp  OverlayWindow.h  Recorder.cpp  Recorder.h  Replayer.cpp  Replayer.h  Scheduler.cpp  Scheduler.h  StringUtils.h  TrcFormat.h  TrcIO.cpp  TrcIO.h  WinAutomation.cpp  WinAutomation.h
src/resources/: app.rc.in
tests/: main.cpp
tools/: icon_gen.cpp
